[package]
name = "rust-docker"
version = "0.1.0"
edition = "2024"

[dependencies]
# Provides bindings to Linux system calls like `chroot`, `unshare`, and `clone`.
nix = "0.27"
# An easy-to-use HTTP client for making web requests (e.g., to Docker Hub).
# The `blocking` feature is useful for simpler, synchronous code.
# The `json` feature allows for easy JSON parsing.
reqwest = { version = "0.11", features = ["blocking", "json"] }
# Used for working with tar archives. We'll use this to unpack container images.
tar = "0.4"
# Used for decompressing gzipped tar archives from Docker Hub.
flate2 = "1.0"
# A powerful serialization/deserialization library for JSON.
serde_json = "1.0"